--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <table>
         <tr>
-            <td><img src="C:\Users\hp\Pictures\Saved Pictures\My project-1 (3).jpg" alt="Shivam profile picture"></td>
+            <td><img src="My project-1 (3)" alt="Shivam profile picture"></td>
             <td> <h1>Shivam Thapa </h1>
                 <p>Student in GRD IMT</p>
                 <p><b><em>Hi my name is Shivam Thapa</em> </b> , i have completed my high school from grd academy , and also done my polytechnic in Electronics and communication engineering from GRD IMT . After completing my diploma i moved in BTECH in Computer Science engineering . I love to play football , video games and sometimes also repairing electronics devices </p></td>
